--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
             </picture>
           </h1>
           <span class="hero_subheading fs_2">Sleepdays change your life.</span>
-          <a class="btn_hero btn_arrow" href="/about">DISCOVER</a>
+          <a class="btn_hero btn_arrow" href="/about">DISCOVERだよ！</a>
         </div>
       </div>
     </section>
